--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,24 +1,25 @@
 server:
   port: 8080
-  host: localhost
-  contextPath: /api
 
 spring:
+  sql:
+    init:
+      mode: always
+      platform: mysql
   datasource:
     url: jdbc:mysql://localhost:3306/management
     username: root
     password: passMQ5&
     driverClassName: com.mysql.cj.jdbc.Driver
   jpa:
-    show-sql: true # Show SQL statements
+    show-sql: false # Show SQL statements
     hibernate:
-      ddl-auto: update # Update the database schema automatically
+      ddl-auto: update # Validate the database schema automatically
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
         format_sql: true # Format SQL statements
-        hbn2dll:
-          auto: update # Update the database if it doesn't exist
+
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
@@ -28,6 +29,10 @@ jwt:
     key: classpath:rsa.private.key
   public:
     key: classpath:rsa.public.key
+
+resources:
+  image:
+    shepard-face: classpath:rsa.private.key
 
 application:
   client:
@@ -42,3 +47,8 @@ application:
           read: 300000
         url: ${application.client.endpoint.method.protocol}://${application.client.endpoint.method.host}:${application.client.endpoint.method.port}${application.client.endpoint.method.basePath}
 
+logging:
+  level:
+    root: info
+    org.springframework.web: trace
+    org.springframework.security: trace
