--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,25 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.29</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/co.streamx.fluent/fluent-jpa -->
+        <dependency>
+            <groupId>co.streamx.fluent</groupId>
+            <artifactId>fluent-jpa</artifactId>
+            <version>1.2.2</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/co.streamx.fluent/sql-grammar -->
+        <dependency>
+            <groupId>co.streamx.fluent</groupId>
+            <artifactId>sql-grammar</artifactId>
+            <version>1.0.17</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/co.streamx.fluent/fluent-mongo -->
+        <dependency>
+            <groupId>co.streamx.fluent</groupId>
+            <artifactId>fluent-mongo</artifactId>
+            <version>1.1.3</version>
+        </dependency>
+
         <!-- Swagger for rest documentation -->
         <dependency>
             <groupId>io.springfox</groupId>
